Fix too big h3 bottom margin

--- a/public/styles/forms.css
+++ b/public/styles/forms.css
@@ -29,7 +29,7 @@
     padding: 5px;
     border-bottom: 1px solid rgb(98, 98, 98);
     padding-bottom: 10px;
-    margin: 0px 1.5vw 2vw;
+    margin: 0px 2rem;
     padding: 5px 5px 5px 10px;
     text-align: left;
 }
